overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,10 @@ html {
   border-width: 1px;
   background-color: #e2f3f5;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
+
 a {
   color: #3d5af1;
   text-decoration: none;
